Fixed: spacing between functions, Added: getPGN function, Added: description in package.json, Added .gitignore and .prettierignore, Updated: README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chesster",
-  "version": "1.0.7",
-  "description": "",
+  "version": "1.0.9",
+  "description": "Parser for chess.com API",
   "main": "index.js",
   "engine": {
     "node": ">=8.0.0"
